darwin-rs/tui/src/bottom_pane/snapshots/darwin_code_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› Ask DarwinCode to do anything                 
                                                
  ? for shortcuts            100% context left
